@@ -330,7 +330,7 @@ if ($access) {
 
 	$owners = "<select name=\"owner_id\">";
 
-    $query = "SELECT user_id, username FROM ".cms_db_prefix()."users";
+    $query = "SELECT user_id, username FROM ".cms_db_prefix()."users ORDER BY username";
     $result = $db->Execute($query);
 
     while($row = $result->FetchRow())
@@ -347,7 +347,7 @@ if ($access) {
 
     $addt_users = "";
 
-    $query = "SELECT user_id, username FROM ".cms_db_prefix()."users WHERE user_id <> " . $userid;
+    $query = "SELECT user_id, username FROM ".cms_db_prefix()."users WHERE user_id <> " . $userid . " ORDER BY username";
     $result = $db->Execute($query);
 
     while($row = $result->FetchRow()) {
